--- a/components/home/servicesCarousel.scss
+++ b/components/home/servicesCarousel.scss
@@ -2,7 +2,7 @@
 
 // Styles de base (mobile first)
 .services-scroll {
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
   padding: $spacing-base 0;
 
